--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,24 @@
+header {
+    background-color: #e7311d;
+    padding: 10px 0;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+} 
+
+.header-button {
+    background-color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
 footer {
     background-color: #f0f0f0;
     padding: 20px;
@@ -15,6 +36,6 @@ footer {
     color: #e7311d; /* Met le lien "Nous contacter" en rouge */
     text-decoration: none;
     font-weight: bold;
-    padding-right: 10px;
+    padding-right: 5px;
     white-space: nowrap;
 }
