--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,16 @@
+main {
+    padding: 20px;
+    padding-bottom: 150px; /* Ajoute de l'espace pour éviter que le footer cache le contenu */
+    box-sizing: border-box;
+}
+
 header {
     background-color: #e7311d;
     padding: 10px 0;
+    padding-top: 5px;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
 }
 
 .header-container {
@@ -8,7 +18,9 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-} 
+    border-radius: 5px;
+    box-sizing: border-box;
+}
 
 .header-button {
     background-color: white;
@@ -30,6 +42,7 @@ footer {
     align-items: center;
     box-sizing: border-box;
     font-size: 0.8em;
+    flex-wrap: wrap; /* Permet au contenu de s'adapter sur petits écrans */
 }
 
 .contact-link {
@@ -38,4 +51,42 @@ footer {
     font-weight: bold;
     padding-right: 5px;
     white-space: nowrap;
+}
+
+/* Responsiveness pour petits écrans */
+@media (max-width: 768px) {
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header-button {
+        margin-bottom: 10px;
+        width: 90%; /* Boutons plus larges sur petits écrans */
+    }
+
+    footer {
+        font-size: 12px;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    footer .contact-link {
+        margin-top: 10px;
+    }
+}
+
+/* Responsiveness pour très petits écrans */
+@media (max-width: 480px) {
+    h1 {
+        font-size: 22px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 14px;
+    }
 }
