--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,9 @@ header {
     padding: 10px 0;
     color: white;
     text-align: center;
-    border-radius: 5px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
     position: relative;
     
 }
@@ -36,6 +38,8 @@ footer {
     box-sizing: border-box;
     font-size: 0.8em;
     flex-wrap: wrap; /* Permet au contenu de s'adapter sur petits écrans */
+    position: fixed; /* Fixe le footer en bas de la page */
+    bottom: 0;
 }
 
 .contact-link {
@@ -48,6 +52,8 @@ footer {
 .logo-container {
     display: flex;
     align-items: center;
+    border-radius: 30%;
+    overflow: hidden; /* Cache les débordements */
 }
 
 .logo {
@@ -89,6 +95,7 @@ footer {
     box-shadow: -2px 0 5px rgba(0,0,0,0.1);
     z-index: 1000;
     transition: right 0.3s ease;
+    
 }
 
 .nav-menu.active {
