--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,8 +20,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 80px;
     box-sizing: border-box;
+    
 }
 /* Le main prend tout l'espace disponible entre le header et le footer */
 
@@ -33,12 +34,12 @@ footer {
     
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
     font-size: 0.8em;
     flex-wrap: wrap; /* Permet au contenu de s'adapter sur petits écrans */
-    position: fixed; /* Fixe le footer en bas de la page */
     bottom: 0;
 }
 
@@ -120,6 +121,8 @@ footer {
 }
 
 .nav-menu a {
+    font-family: Arial, sans-sherif;
+    font-size: 1.2em;
     color: #333;
     text-decoration: none;
     padding: 15px 20px;
