new file:   bdd/database.sql 	new file:   static/assets/img/6488674.png 	modified:   static/css/accueil.css 	new file:   static/css/ajout_stock.css 	modified:   static/css/connexion.css 	modified:   static/css/contact.css 	new file:   static/css/deconnexion.css 	modified:   static/css/gerer_compte.css 	modified:   static/css/gerer_magasins.css     modified:   static/css/main.css     new file:   static/css/stock.css     modified:   static/html/accueil.html     new file:   static/html/ajout_stock.html     modified:   static/html/ajouter_magasin.html     modified:   static/html/connexion.html     modified:   static/html/contact.html     new file:   static/html/deconnexion.html     modified:   static/html/gerer_comptes.html     modified:   static/html/gerer_magasins.html     modified:   static/html/gestion.html     new file:   static/html/journal_actions.html     new file:   static/html/stock.html

--- a/static/css/accueil.css
+++ b/static/css/accueil.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     text-align: center;
+    background-color: #f9f9f9; /* Couleur de fond spécifique à la page d'accueil */
 }
 
 
