new file:   .htaccess 	modified:   templates/accueil/accueil.twig 	modified:   templates/layout/header.twig

--- a/templates/layout/header.twig
+++ b/templates/layout/header.twig
@@ -2,7 +2,7 @@
     <div class="header-container">
         <!-- Logo -->
         <div class="logo-container">
-            <img src="/static/assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
+            <img src="/stockocesi/static/image/logo.png" alt="Logo de Stock O' CESI" class="logo">
         </div>
 
         <!-- Slogan -->
@@ -37,6 +37,6 @@
                 </ul>
             </nav>
         </div>
-        <script src="/static/js/burger.js"></script>
+        <script src="/stockocesi/static/js/burger.js"></script>
     </div>
 </header>
