--- a/templates/accueil/accueil.twig
+++ b/templates/accueil/accueil.twig
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock O' CESI</title>
-    <link rel="stylesheet" href="/static/css/accueil.css">
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/stockocesi/static/css/accueil.css">
+    <link rel="stylesheet" href="/stockocesi/static/css/main.css">
 </head>
 <body>
     
