modified:   index.php 	modified:   src/Controllers/TaskController.php 	modified:   src/Controllers/UserController.php 	modified:   templates/accueil/accueil.twig

--- a/templates/accueil/accueil.twig
+++ b/templates/accueil/accueil.twig
@@ -17,7 +17,7 @@
         {% if user is defined %}
             <button class="main-button" onclick="window.location.href='/stock'">Mon stock</button>
         {% else %}
-            <button class="main-button" onclick="window.location.href='/connexion'">Connexion</button>
+            <button class="main-button" onclick="window.location.href='/login'">Connexion</button>
         {% endif %}
     
         <section>
