modified:   templates/layout/header.twig

--- a/templates/layout/header.twig
+++ b/templates/layout/header.twig
@@ -13,12 +13,13 @@
             <span class="burger-icon"></span>
             <nav class="nav-menu">
                 <ul>
-                    {% if user is not defined %}
-                        <!-- Lien pour les utilisateurs non connectés -->
-                        <li><a href="/stockocesi/login">Connexion</a></li>
+                    {% if current_page == 'login' %}
+                        <!-- Uniquement le bouton Accueil sur la page de connexion -->
+                        <li><a href="/stockocesi/accueil">Accueil</a></li>
                     {% else %}
-                        {% if current_page == 'login' %}
-                            <li><a href="/stockocesi/accueil">Accueil</a></li>
+                        {% if user is not defined %}
+                            <!-- Lien pour les utilisateurs non connectés -->
+                            <li><a href="/stockocesi/login">Connexion</a></li>
                         {% else %}
                             <!-- Lien pour les utilisateurs connectés -->
                             <li><a href="/stockocesi/store">Magasins partenaires</a></li>
