modified:   static/css/main.css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -67,6 +67,11 @@ footer {
     align-items: center;
     border-radius: 30%;
     overflow: hidden; /* Cache les débordements */
+    cursor: pointer;
+}
+
+.logo-container a:hover {
+    opacity: 0.8;
 }
 
 .logo {
