--- a/templates/account/login.twig
+++ b/templates/account/login.twig
@@ -13,7 +13,7 @@
 
     <main>
         <h1>Connexion</h1>
-        <form action="/login" method="post">
+        <form action="/stockocesi/login" method="post">
             <div>
                 <label for="email">Adresse mail</label><br>
                 <input type="email" id="email" name="email" required>
@@ -22,6 +22,9 @@
                 <label for="password">Mot de passe</label><br>
                 <input type="password" id="password" name="password" required>
             </div>
+            {% if error %}
+                <div class="error-message">{{ error }}</div>
+            {% endif %}
             <button type="submit" class="main-button">Connexion</button>
         </form>
     </main>
