--- a/templates/journal/log.twig
+++ b/templates/journal/log.twig
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ pageTitle }}</title>
-    <link rel="stylesheet" href="/static/css/gestion.css">
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/stockocesi/static/css/gestion.css">
+    <link rel="stylesheet" href="/stockocesi/static/css/main.css">
 </head>
 <body>
     {% include 'layout/header.twig' %}
