Bouton accueil burger

--- a/templates/layout/header.twig
+++ b/templates/layout/header.twig
@@ -15,7 +15,7 @@
                 <ul>
                     {% if session.user_id is not defined %}
                         <!-- Menu pour utilisateurs non connectés -->
-                        <li><a href="/stockocesi/accueil/accueil">Accueil</a></li>
+                        <li><a href="/stockocesi/accueil">Accueil</a></li>
                         <li><a href="/stockocesi/login">Connexion</a></li>
                     {% else %}
                         <!-- Menu pour utilisateurs connectés -->
